--- a/last-hearth-landing/src/app/profile/profile-navigation/profile-navigation.component.html
+++ b/last-hearth-landing/src/app/profile/profile-navigation/profile-navigation.component.html
@@ -1,4 +1,5 @@
-@let invitations = invitations$ | async; @let userVerifications = userVerifications$ | async;
+@let invitations = invitations$ | async;
+@let userVerifications = userVerifications$ | async;
 
 <div class="flex xl:flex-col gap-2 z-300!">
     <button
