--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,5 +1,8 @@
-@let online = online$ | async; @let time = time$ | async; @let isAuth = userService.authState$ | async; @let invitations
-= invitations$ | async; @let userVerifications = userVerifications$ | async;
+@let online = online$ | async;
+@let time = time$ | async;
+@let isAuth = userService.authState$ | async;
+@let invitations = invitations$ | async;
+@let userVerifications = userVerifications$ | async;
 <div class="flex flex-col xl:gap-24 gap-8">
     <div class="flex justify-center sm:justify-between px-4 sm:px-0">
         <!-- Логотип -->
@@ -46,25 +49,25 @@
                     </div>
                 </div>
             </div>
-            @if(isAuth) {
-            <div
-                class="mt-8 z-10 flex w-fit h-20 items-center justify-start rounded-xl backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
-            >
-                <div class="rounded-2xl gap-1 p-1 sm:p-3 flex items-center">
-                    <p class="text-sm sm:text-2xl/7.5 text-white">{{userService.userName}}</p>
-                    @if(userService.userImage){
-                    <img
-                        [src]="userService.userImage"
-                        alt="Аватар пользователя"
-                        (click)="isAuth ? '' : signIn()"
-                        [routerLink]="isAuth ? ['/profile'] : ''"
-                        class="relative ml-2 cursor-pointer rounded-lg z-10 size-12 sm:size-16 shadow-md shadow-lh-primary-2"
-                    />
-                    }@else {
-                    <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 text-6xl! text-white" />
-                    }
+            @if (isAuth) {
+                <div
+                    class="mt-8 z-10 flex w-fit h-20 items-center justify-start rounded-xl backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
+                >
+                    <div class="rounded-2xl gap-1 p-1 sm:p-3 flex items-center">
+                        <p class="text-sm sm:text-2xl/7.5 text-white">{{ userService.userName }}</p>
+                        @if (userService.userImage) {
+                            <img
+                                [src]="userService.userImage"
+                                alt="Аватар пользователя"
+                                (click)="isAuth ? '' : signIn()"
+                                [routerLink]="isAuth ? ['/profile'] : ''"
+                                class="relative ml-2 cursor-pointer rounded-lg z-10 size-12 sm:size-16 shadow-md shadow-lh-primary-2"
+                            />
+                        } @else {
+                            <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 text-6xl! text-white" />
+                        }
+                    </div>
                 </div>
-            </div>
             }
         </div>
     </div>
@@ -79,16 +82,16 @@
             >
                 <tui-icon icon="@tui.house" />
             </a>
-            @if(!isAuth) {
-            <button
-                [routerLink]="['/start-game']"
-                class="nav-button relative w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
-                [ngClass]="{ 'bg-[#e2d7bb]! text-lh-primary! font-bold! text-base!': select === 'startGame' }"
-            >
-                <tui-icon icon="@tui.gamepad-2" />
-                <span class="hidden md:block">НАЧАТЬ ИГРУ</span>
-                <tui-pulse tuiHintAppearance="floating" class="!absolute !top-0.5 !right-0.5 !scale-110"> </tui-pulse>
-            </button>
+            @if (!isAuth) {
+                <button
+                    [routerLink]="['/start-game']"
+                    class="nav-button relative w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                    [ngClass]="{ 'bg-[#e2d7bb]! text-lh-primary! font-bold! text-base!': select === 'startGame' }"
+                >
+                    <tui-icon icon="@tui.gamepad-2" />
+                    <span class="hidden md:block">НАЧАТЬ ИГРУ</span>
+                    <tui-pulse tuiHintAppearance="floating" class="!absolute !top-0.5 !right-0.5 !scale-110"> </tui-pulse>
+                </button>
             }
             <button
                 [routerLink]="['/rules']"
@@ -106,15 +109,15 @@
                 <tui-icon icon="@tui.info" />
                 <span class="hidden md:block">FAQ</span>
             </button>
-            @if(isAuth) {
-            <button
-                [routerLink]="['/settlements']"
-                class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
-                [ngClass]="{ 'bg-[#e2d7bb]! text-lh-primary! font-bold! text-base!': select === 'settlements' }"
-            >
-                <tui-icon icon="@tui.tent" />
-                <span class="hidden md:block">СЕЛЕНИЯ</span>
-            </button>
+            @if (isAuth) {
+                <button
+                    [routerLink]="['/settlements']"
+                    class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                    [ngClass]="{ 'bg-[#e2d7bb]! text-lh-primary! font-bold! text-base!': select === 'settlements' }"
+                >
+                    <tui-icon icon="@tui.tent" />
+                    <span class="hidden md:block">СЕЛЕНИЯ</span>
+                </button>
             }
             <button
                 [routerLink]="['/titles']"
@@ -142,7 +145,6 @@
             <button
                 *ngIf="isAuth"
                 (click)="signOut()"
-                [routerLink]="isAuth ? ['/profile'] : ''"
                 class="relative nav-button bg-red-800! text-neutral-300 font-bold cursor-pointer hover:!bg-lh-danger-hover rounded-tr-lg rounded-br-lg p-1 w-[32px]!"
             >
                 <tui-icon icon="@tui.log-out" />
