--- a/last-hearth-landing/src/app/profile/player-verification-form/player-verification-form.component.html
+++ b/last-hearth-landing/src/app/profile/player-verification-form/player-verification-form.component.html
@@ -1,4 +1,6 @@
-@let questions = questions$ | async; @if(questions !== null) {
+@let questions = questions$ | async;
+
+@if (questions !== null) {
 <div class="p-6! bg-transparent flex flex-col gap-4">
     <p class="text-2xl/7.5">Запрос на верификацию</p>
     <form [formGroup]="form" (ngSubmit)="onSubmit.next()" class="flex flex-col gap-2">
