--- a/last-hearth-landing/src/app/titles/knight/knight-title/knight-title.component.html
+++ b/last-hearth-landing/src/app/titles/knight/knight-title/knight-title.component.html
@@ -14,6 +14,8 @@
     </div>
     <p class="pt-4 text-3xl font-semibold">Что идет в комплекте с титулом "Рыцарь":</p>
     <div class="flex gap-4 p-4">
-        @for (item of gameItems; track $index) { <app-game-item-card [data]="item"></app-game-item-card> }
+        @for (item of gameItems; track $index) {
+            <app-game-item-card [data]="item"></app-game-item-card>
+        }
     </div>
 </div>
