--- a/last-hearth-landing/src/app/styles/variables.less
+++ b/last-hearth-landing/src/app/styles/variables.less
@@ -2,4 +2,5 @@
     // TaigaUI variables.
     --tui-background-accent-1: var(--lh-accent-2);
     --tui-background-accent-1-hover: var(--lh-accent);
+    --tui-text-action: var(--lh-accent-2);
 }
