--- a/last-hearth-landing/src/styles.css
+++ b/last-hearth-landing/src/styles.css
@@ -3,7 +3,7 @@
 :root {
     /* Last Hearth variables. */
     --lh-primary: #3f3c34;
-    --lh-primary-2: #31302b;
+    --lh-primary-2: #332c26;
 
     --lh-accent: #ff7920;
     --lh-accent-2: #945a32;
