--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -7,22 +7,22 @@
     </button>
     <tui-carousel [(index)]="carouselIndex" [duration]="3500" class="h-auto! !rounded-t-xl">
         @for (item of images; track $index) {
-        <div *tuiItem class="size-full relative">
-            <img
-                [src]="item.image"
-                [class.brightness-75!]="item.isLight"
-                class="h-full w-full md:h-[600px] object-cover object-center"
-            />
-            <div
-                class="absolute flex flex-col justify-start left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white w-[90%] px-4 py-6"
-            >
-                <!-- Заголовок -->
-                <h2 class="text-8xl font-bold mb-4 uppercase !text-shadow-lg">{{ item.header }}</h2>
+            <div *tuiItem class="size-full relative">
+                <img
+                    [src]="item.image"
+                    [class.brightness-75!]="item.isLight"
+                    class="h-full w-full md:h-[600px] object-cover object-center"
+                />
+                <div
+                    class="absolute flex flex-col justify-start left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white w-[90%] px-4 py-6"
+                >
+                    <!-- Заголовок -->
+                    <h2 class="text-8xl font-bold mb-4 uppercase !text-shadow-lg">{{ item.header }}</h2>
 
-                <!-- Текст под заголовком -->
-                <p [innerHTML]="item.body" class="text-4xl font-medium !text-shadow-lg"></p>
+                    <!-- Текст под заголовком -->
+                    <p [innerHTML]="item.body" class="text-4xl font-medium !text-shadow-lg"></p>
+                </div>
             </div>
-        </div>
         }
     </tui-carousel>
     <tui-pagination size="s" [length]="images.length" [(index)]="carouselIndex" class="mt-2" />
@@ -33,8 +33,10 @@
         <tui-icon icon="@tui.chevron-left" class="text-white" />
     </button>
 </div>
-<div class="flex flex-wrap items-center gap-7 pt-0 p-10">
-    @for (item of news; track $index; let first = $first) {
-    <app-news-card [data]="item" class="!h-auto w-full" />
+<div class="flex flex-wrap items-center gap-7 pt-0 p-10 pb-4">
+    @for (item of pageNews; track $index) {
+        <app-news-card [data]="item" class="!h-auto w-full" />
     }
 </div>
+
+<tui-pagination [index]="pageIndex" [length]="getPagesCount()" (indexChange)="goToPage($event)" class="mb-4" />
