--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -4,73 +4,73 @@
 
 @if (leaderBoard === null) {
     <tui-loader />
-} @if (leaderBoard) {
-<tui-tabs [(activeItemIndex)]="activeItemIndex" class="!text-xl mt-4 mb-8 !font-semibold !w-full content-tabs">
-    <button tuiTab type="button" (click)="getDeaths()" class="text-2xl/7.5 uppercase !font-bold">По смертям</button>
-    <button tuiTab type="button" (click)="getHoursPlayed()" class="text-2xl/7.5 uppercase !font-bold">
-        По онлайну
-    </button>
-    <button tuiTab type="button" (click)="getKills()" class="text-2xl/7.5 uppercase !font-bold">По убийствам</button>
-</tui-tabs>
+}
+@if (leaderBoard) {
+    <tui-tabs [(activeItemIndex)]="activeItemIndex" class="!text-xl mt-4 mb-16 !font-semibold !w-full content-tabs">
+        <button tuiTab type="button" (click)="getDeaths()" class="text-2xl/7.5 uppercase !font-bold">По смертям</button>
+        <button tuiTab type="button" (click)="getHoursPlayed()" class="text-2xl/7.5 uppercase !font-bold">
+            По онлайну
+        </button>
+        <button tuiTab type="button" (click)="getKills()" class="text-2xl/7.5 uppercase !font-bold">
+            По убийствам
+        </button>
+    </tui-tabs>
 
-<div class="flex flex-col gap-6">
-    @for (item of leaderBoard; track $index; let odd = $odd;) {
-    <div class="flex gap-4">
-        <div>
-            <div
-                [style.backgroundImage]="odd ? 'url(/1.webp)' : 'url(/3.webp)'"
-                class="size-16 transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
-            >
-                <div class="flex size-full justify-center items-center p-3 z-50">
-                    <p class="text-3xl my-6 uppercase font-bold text-[#bdb093] self-center">{{$index + 1}}</p>
-                </div>
-            </div>
+    @if (leaderBoard.length >= 3) {
+        <div class="flex gap-8 lg:gap-16 items-center justify-center mb-16">
+            <app-leader-card
+                [playerName]="leaderBoard[1]?.name ?? ''"
+                ratingPlace="2"
+                [type]="getTypeLabel()"
+                [count]="getCount(leaderBoard[1])"
+            />
+            <app-leader-card
+                [playerName]="leaderBoard[0]?.name ?? ''"
+                ratingPlace="1"
+                [isBigSize]="true"
+                [count]="getCount(leaderBoard[0])"
+                [type]="getTypeLabel()"
+            />
+            <app-leader-card
+                [playerName]="leaderBoard[2]?.name ?? ''"
+                ratingPlace="3"
+                [count]="getCount(leaderBoard[2])"
+                [type]="getTypeLabel()"
+            />
         </div>
-        <div
-            [style.backgroundImage]="odd ? 'url(/1.webp)' : 'url(/3.webp)'"
-            class="h-16 transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
-        >
-            <div class="flex w-full justify-between gap-6 items-center px-8 p-4 z-50 text-neutral-200 text-2xl/7.5">
-                <img src="3.webp" class="size-10 rounded-full" />
-                <p>{{item.name}}</p>
-                <p *ngIf="activeItemIndex === 0">{{item.deaths}}</p>
-                <p *ngIf="activeItemIndex === 1">{{item.hours_played}}</p>
-                <p *ngIf="activeItemIndex === 2">{{item.kills}}</p>
-            </div>
-        </div>
-    </div>
     }
-</div>
 
-<!-- <table tuiTable [columns]="getNames(leaderBoard)" class="table w-full">
-    <thead>
-        <tr tuiThGroup>
-            <th tuiTh [resizable]="true">Ник</th>
-            <th tuiTh>
-                <button (click)="getDeaths()" class="cursor-pointer">
-                    Смерти
-                    <tui-icon *ngIf="selectedTh === 'deaths'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
-                </button>
-            </th>
-            <th tuiTh>
-                <button (click)="getKills()" class="cursor-pointer">
-                    Убийства<tui-icon *ngIf="selectedTh === 'kills'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
-                </button>
-            </th>
-            <th tuiTh>
-                <button (click)="getHoursPlayed()" class="cursor-pointer">
-                    Часы<tui-icon *ngIf="selectedTh === 'hours'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
-                </button>
-            </th>
-        </tr>
-    </thead>
-    <tbody tuiTbody [data]="leaderBoard">
-        <tr *ngFor="let item of leaderBoard" tuiTr>
-            <th *tuiCell="'name'" tuiTd>{{ item.name }}</th>
-            <th *tuiCell="'deaths'" tuiTd>{{ item.deaths }}</th>
-            <th *tuiCell="'kills'" tuiTd>{{ item.kills }}</th>
-            <th *tuiCell="'hours_played'" tuiTd>{{ item.hours_played }}</th>
-        </tr>
-    </tbody>
-</table> -->
+    <div class="flex flex-col gap-6">
+        @for (item of leaderBoard; track $index; let odd = $odd) {
+            @if ($index > 2) {
+                <div class="flex gap-4">
+                    <div>
+                        <div
+                            [style.backgroundImage]="'url(/br.jpg)'"
+                            class="size-16 flex bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
+                        >
+                            <div class="flex size-full justify-center items-center p-3 z-30">
+                                <p class="text-3xl my-6 uppercase font-bold text-[#bdb093] self-center">
+                                    {{ $index + 1 }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="h-16 bg-lh-primary transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
+                    >
+                        <div
+                            class="flex w-full justify-between gap-6 items-center px-8 p-4 z-30 text-neutral-200 text-2xl/7.5"
+                        >
+                            <img src="3.webp" class="size-12 rounded-full" />
+                            <p class="font-semibold">{{ item.name }}</p>
+                            <p class="font-semibold" *ngIf="activeItemIndex === 0">{{ item.deaths }}</p>
+                            <p class="font-semibold" *ngIf="activeItemIndex === 1">{{ item.hours_played }}</p>
+                            <p class="font-semibold" *ngIf="activeItemIndex === 2">{{ item.kills }}</p>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
 }
