--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.less
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.less
@@ -11,7 +11,7 @@
     overflow: hidden !important;
 }
 
-[tuiTable][data-size="s"] [tuiTitle] {
+[tuiTable][data-size='s'] [tuiTitle] {
     flex-direction: row;
     gap: 0.375rem;
 }
